# GPlib

./: CMakeLists.txt  README.md  cpp_cuda_plot.m
examples/: CMakeLists.txt  gp_main.cpp
gplib/: CMakeLists.txt  cutrain.hpp  gp.hpp  gplib.hpp  gplib_misc.hpp  gplib_structs.hpp  kernel.hpp
